feat: make update product endpoint return detail view
